# user-tracking-service

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yaml  pyproject.toml  pytest.ini  requirements.txt
app/application/dtos/: action_dtos.py  activity_dtos.py
app/application/interactors/: action_interactors.py  activity_interactors.py
app/application/interfaces/: action_interface.py  activity_interface.py
app/domain/entities/: action_entity.py  activity_entity.py
app/infrastructure/adapters/: action_gateway.py  activity_gateway.py  uow.py
app/infrastructure/database/: database.py
app/main/: config.py  run.py
app/main/ioc/providers/: action.py  root.py
app/presentation/controllers/: handlers.py  schemas.py
src/app/infrastructure/: broker.py
src/app/infrastructure/adapters/: action_gateway.py
src/app/infrastructure/database/: database.py
src/app/main/: run.py
src/app/main/ioc/providers/: root.py
tests/: conftest.py
tests/integration_tests/: test_handlers.py
tests/unit_tests/: test_action_gateway.py
