[tool.poetry]
name = "tracking-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
motor = "^3.6.0"
pydantic = "^2.10.4"
aiokafka = "^0.12.0"
faststream = {extras = ["kafka"], version = "^0.5.33"}
dishka = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
